fix: minor updates on the about section regarding formatting and spacing preferences

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -151,8 +151,8 @@
 
 @media (min-width: 768px) {
   :root {
-    --section-pt: 8rem;
-    --section-pb: 8rem;
+    --section-pt: 4rem;
+    --section-pb: 4rem;
   }
 }
 
